# X265v2

./: .gitmodules  CMakeLists.txt  ReadMe.txt
cmake/: X265v2Config.cmake.in
include/X265v2/: X265v2.h  X265v2Codec.h
scripts/: build.bat
src/: X265v2.cpp  X265v2Codec.cpp  stdafx.cpp  stdafx.h
